# opencv-cpp-practices

./: .gitignore  README.md
basic-image-manipulations/: CMakeLists.txt
basic-image-manipulations/include/: blurring.hpp
basic-image-manipulations/src/: blurring.cpp  main.cpp
display-text/: CMakeLists.txt
display-text/include/: screen.hpp
display-text/src/: main.cpp  screen.cpp
